1999-06-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (objc.dll): Use .o suffix to distinguish from
	other files.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (objc.dll): Rename libobjc.a to libobjcdll.a.
	(install-data-local): Accomodate.  Use objc.dll.c instead of dllinit.c.
	Put rules above in an USEDLL automake conditional (removing the
	shell logic in the latter).

1999-06-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am: Remove manual constructor stuff.
	(CPPFLAGS): Don't define for DLL import/export.  (Use
	BUILDING_LIBOBJC to select in externvar.h.in).
	(DLLOBJS): Use .lo files.
	(objc.dll): Use .lo suffix for dllinit, to avoid wildcards
	picking up as .o.

	* ltconfig: Updated with -DDLL as PIC flag for DLL builds.

1999-06-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* class.c (__objc_class_links_resolved): Use externobjcvardef.

	* sendmsg.c (__objc_uninstalled_dtable): Likewise.

	* selector.c (__objc_selector_max_index): Likewise.

	* init.c (__objc_runtime_mutex, __objc_runtime_threads_alove):
	Likewise.

	* sarray.c (__objc_sparse[23]_id): Likewise.

	* thr.c (__objc_thread_exit_status): Likewise.

	* init.c (create_tree_of_subclasses_inherited_from): Handle
	NULL strings in diagnostic output.

	* selector.c (__sel_register_typed_name,
	__objc_uninstalled_dtable): Likewise.

1999-06-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config/i386/mframe-{freebsd,generic,linux-gnu,openbsd,sysv4.2MP}.h,
	config/powerpc/mframe-{generic,linux-gnu}.h,
	config/sparc/mframe-{generic,sunos4.1.3}.h: Add casts for isdigit
	args.

1999-05-31    <mgd@HELEN>

	* Makefile.am (objc.dll): Depend on dllinit.  Define constructor_func
	for dllinit.c.

1999-05-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (objc.dll): Update per new genctors.
	
	* genctors: Redirect into $1.c.  Use $1 as the function name.

1999-05-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
